<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Configurações</string>
    <string name="nav_about_us">Sobre</string>
    <string name="nav_other">Outros</string>
    <string-array name="nav_item_activity_titles">
        <item>Inicio</item>
        <item>Configurações</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Photos</item>
    </string-array>
    <string name="activity_title_about_us">Sobre</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_name">NPK</string>
    <string name="app_subname"> Nutrição de Plantas</string>
    <string name="inicio">Início</string>
    <string name="sobre">Sobre</string>
    <string name="contato">Contato</string>
    <string name="action_settings">Settings</string>
    <string name="btn_analiseFoliar">Interpretação Análise Foliar</string>
    <string name="btn_analiseSolo">Interpretação Análise Solo</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_cultOrganico">Cultivo Orgânico</string>
    <string name="btn_custoFertilizante">Custo/kg Fertilizante</string>
    <string name="btn_fertCafConilon">Fertirrigação do Café Conilon</string>
    <string name="btn_fertilizantes">Fertilizantes</string>
    <string name="btn_fertirrigacao">Fertirrigação Geral</string>
    <string name="btn_formComuns">Formulados mais comuns</string>
    <string name="btn_gesso">Recomendação de Gesso</string>
    <string name="btn_recomedacao_micronutrientes">Recomendação de Micronutrientes</string>
    <string name="btn_recomendacoes_adubacao">Recomendação de adubação</string>
    <string name="btn_transUnidades">Transformação de Unidades</string>
    <string name="Abacate">Abacate</string>
    <string name="Abacaxi">Abacaxi</string>
    <string name="Abóbora_de_moita">Abóbora de moita</string>
    <string name="Abóbora_rasteira">Abóbora rasteira</string>
    <string name="Acerola">Acerola</string>
    <string name="Alface_Agrião">Alface/Agrião</string>
    <string name="Algodão">Algodão</string>
    <string name="Alho">Alho</string>
    <string name="Ameixa">Ameixa</string>
    <string name="Arroz_Inundado">Arroz Inundado</string>
    <string name="Arroz_Sequeiro">Arroz Sequeiro</string>
    <string name="Banana">Banana</string>
    <string name="Batata">Batata</string>
    <string name="Batata_Doce">Batata Doce</string>
    <string name="Berinjela">Berinjela</string>
    <string name="Beterraba">Beterraba</string>
    <string name="Brócolos">Brócolos</string>
    <string name="Bucha">Bucha</string>
    <string name="Cacau">Cacau</string>
    <string name="Café_Arábica">Café Arábica</string>
    <string name="Café_Conilon">Café Conilon</string>
    <string name="Cana">Cana</string>
    <string name="Caqui">Caqui</string>
    <string name="Cebola">Cebola</string>
    <string name="Cebolinha">Cebolinha</string>
    <string name="Cedro_Australiano">Cedro Australiano</string>
    <string name="Cenoura">Cenoura</string>
    <string name="Chuchu">Chuchu</string>
    <string name="Cítrus">Cítrus</string>
    <string name="Coco">Coco</string>
    <string name="Couve_flor">Couve-flor</string>
    <string name="Couve_manteiga">Couve-manteiga</string>
    <string name="Eucalípto">Eucalípto</string>
    <string name="Feijão">Feijão</string>
    <string name="Feijão_vagem">Feijão-vagem</string>
    <string name="Figo">Figo</string>
    <string name="Gengibre">Gengibre</string>
    <string name="Goiaba">Goiaba</string>
    <string name="Graviola">Graviola</string>
    <string name="Inhame">Inhame</string>
    <string name="Jiló">Jiló</string>
    <string name="Lichia">Lichia</string>
    <string name="Macadâmia">Macadâmia</string>
    <string name="Mamão">Mamão</string>
    <string name="Mandioca">Mandioca</string>
    <string name="Mandioquinha_salsa">Mandioquinha-salsa</string>
    <string name="Manga">Manga</string>
    <string name="Maracujá">Maracujá</string>
    <string name="Milho">Milho</string>
    <string name="Morango">Morango</string>
    <string name="Nectarina">Nectarina</string>
    <string name="Nêspera">Nêspera</string>
    <string name="Ornamentais">Ornamentais</string>
    <string name="Pastagem">Pastagem</string>
    <string name="Pepino">Pepino</string>
    <string name="Pêssego">Pêssego</string>
    <string name="Pimenta">Pimenta</string>
    <string name="Pimenta_do_Reino">Pimenta-do-Reino</string>
    <string name="Pimentão">Pimentão</string>
    <string name="Pupunha">Pupunha</string>
    <string name="Quiabo">Quiabo</string>
    <string name="Rabanete">Rabanete</string>
    <string name="Repolho">Repolho</string>
    <string name="Salsa">Salsa</string>
    <string name="Seringueira">Seringueira</string>
    <string name="Tomate">Tomate</string>
    <string name="Uva">Uva</string>
    <string name="kg_ha_gesso">Kg/ha de gesso</string>
    <string name="K_mg_dm_3">K (mg/dm³)</string>
    <string name="Ca_cmolc_dm_3">Ca (cmolc/dm³)</string>
    <string name="Mg_cmolc_dm_3">Mg (cmolc/dm³)</string>
    <string name="Al_cmolc_dm_3">Al (cmolc/dm³)</string>
    <string name="H_Al_cmolc_dm_3">H+Al (cmolc/dm³)</string>
    <string name="tit_calagem"><b>Calagem</b></string>
    <string name="tit_sobre">Softweb - Apps Development</string>
    <string name="tit_substrato">Adubação do substrato para a produção de mudas</string>
    <string name="tit_adubMicro">Adubação com Micronutrientes</string>
    <string name="tit_apresenta_titulo">Sistema de Recomedação de Calagem e Adubação</string>
    <string name="tit_gessagem">Gessagem</string>
    <string name="tit_select">Selecione a variedade e aperte o OK</string>
    <string name="title_activity_adub_abacate">Abacate</string>
    <string name="title_activity_analise_foliar">Análise Foliar</string>
    <string name="title_activity_analise_solo">Análise Solo</string>
    <string name="title_activity_cultivo_organico">Cultivo Orgânico</string>
    <string name="title_activity_custo_fertilizantes">Custo Fertilizantes</string>
    <string name="title_activity_fert_lizantes">Fertlizantes</string>
    <string name="title_activity_fertirrigacao_cafe">Fertirrigação do Café Conilon</string>
    <string name="title_activity_fertirrigacao_geral">Fertirrigação Geral</string>
    <string name="title_activity_forms_comuns">Formulados Comuns</string>
    <string name="title_activity_recomendacao_adubacao">Recomendação de Adubação</string>
    <string name="title_activity_recomendacao_gesso">Gesso</string>
    <string name="title_activity_recomendacao_micronutrientes">Micronutrientes</string>
    <string name="title_activity_trans_unidade">Transformação de Unidades</string>
    <string name="title_activity_banana">Banana</string>
    <string name="txt_apresenta_textoP1">Este App tem por objetivo facilitar os cálculos da quantidade de nutrientes a ser aplicada às culturas, com base na análise do solo e na produtividade esperada.</string>
    <string name="txt_apresenta_textoP2">É importante que cada técnico (usuário deste software) que detenha conhecimento referente à  nutrição de determinadas culturas, análise criticamente as quantidades e a forma de aplicação dos nutrientes e nos comunique para que as modificações sejam feitas, aumentando, assim, cada vez mais a exatidão das recomendações.</string>
    <string name="txt_apresenta_textoP3">Para se obter a recomendação da quantidade de nutrientes, calcário e gesso, basta o usuário digitar as informações solicitadas nos campos</string>
    <string name="txt_cultura">Cultura:</string>
    <string name="txt_dose">Dose (Kg/ha)</string>
    <string name="txt_micronutriente">Micronutriente</string>
    <string name="txt_numero_Extrator">Número do Extrator*</string>
    <string name="txt_teor_analise_solo">Teor da análise do solo (mg/dm³)</string>
    <string name="txt_obs">Observações:</string>
    <string name="txt_obs_1_L1">*Se <u>Mehlich</u>, digite o número <b>1</b></string>
    <string name="txt_obs_1_L2">Se <u>DTPA</u>, digite o número <b>2</b></string>
    <string name="txt_obs_1_L3">Se <u>Água quente</u>, digite o número <b>3</b></string>
    <string name="txt_obs_2_L1">1) O gesso deve ser utilizado somente para a correção de acidez do solo em camadas abaixo de 20 cm de profundidade.</string>
    <string name="txt_obs_2_L2">2) O gesso deve ser aplicado 2 meses após a calagem.</string>
    <string name="txt_produtor">Produtor:</string>
    <string name="txt_subs_l1">700 L de solo (horizonte B)</string>
    <string name="txt_subs_l2">300 L de esterco de gado ou 100 L de esterco de galinha</string>
    <string name="txt_subs_l3">2 kg de calcário dolomítico</string>
    <string name="txt_subs_l4">4 kg de superfosfato simples</string>
    <string name="txt_subs_l5">0.3 kg de cloreto de potássio</string>
    <string name="txt_subs_l6">50 g de <u>FTE</u></string>
    <string name="txt_subs_l7">Adubação nitrogenada em cobertura</string>
    <string name="txt_subs_l8">Após o lançamento das primeiras folhas, irrigar com soloção de uréia a 0.5 ou sulfato de amônio a 1.
        Logo após, lavar as folhas com água pura</string>
    <string name="analise_solo"><b>Análise do solo: </b></string>
    <string name="p_mehlich">P (Mehlich-1)</string>
    <string name="k_mehlich">K (Mehlich-1)</string>
    <string name="sat_bases">Sat. Bases (V)</string>
    <string name="ctc_solo">CTC do solo (T)</string>
    <string name="prnt_calcario">PRNT do calcário</string>
    <string name="mg_dm3">mg/dm³</string>
    <string name="percent">%</string>
    <string name="tha">t/ha</string>
    <string name="cmolc_dm3">cmolc/dm³</string>
    <string name="aduba_pos_plantio"><b>Adubação de cobertura após plantio</b></string>
    <string name="qtd_calcario">Quantidade de calcário: </string>
    <string name="espaçamento">Espaçamento*: </string>
    <string name="recomendacao"><b>Recomendação</b></string>
    <string name="tit_alface_agriao"><b>Adubação para a cultura de Alface e Agrião</b></string>
    <string name="l_m2">L/m² de</string>
    <string name="esterco_bovino"><b> Esterco Bovíno</b></string>
    <string name="adubacao_canteiro">Adubação por canteiro:</string>
    <string name="g_m2">g/m² de</string>
    <string name="alfa_15dias">1) 15 dias após plantio:</string>
    <string name="alfa_30_40dias">2) 30 e 40 dias após plantio:</string>
    <string name="alfa_obs1"> O calcário deve ser incorporado a 20 cm de profundidade antes de se formarem os canterios.</string>
    <string name="alfa_obs2"> Após formados os canteiros, os fertilizantes recomendados para o plantio devem ser aplicados
        por m2 de canteiro e incorporados a uma profundidade de 10 a 15 cm.</string>
    <string name="alfa_obs3"> Se utilizar esterco de cama de aves, reduzir a dose pela metade. Se utilizar esterco de gaiola,
        reduzir a dose para 1/3.  Se utilizar composto, aplicar a mesma dose do esterco bovino.</string>
    <string name="alfa_obs4"> No caso de baixo vigor das plantas, recomenda-se fazer quatro aplicações foliares de solucão
        de uréia a 5 g/L por semana.</string>
    <string name="alfa_obs5"> Produtividade esperada = 21.000 kg/ha ou 9.000 dúzias ou 1.500 engradados/ha.</string>
    <string name="superfosfato"><b>Superfosfato Simples</b></string>
    <string name="fte"><b>FTE</b></string>
</resources>