<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_abobora_rasterira"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.softweb.npk.activity.submenu.fragaduba.culturas.AlfaceAgriao"
    tools:showIn="@layout/activity_aface_agriao">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tit_alface_agriao"
            android:textSize="@dimen/tamanho_subtitulo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/espaçamento" />

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="0,25"
                android:gravity="center"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="X"
                android:gravity="center"/>
            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="0,25"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="m" />

        </LinearLayout>
        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analise_solo" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:paddingLeft="@dimen/txtObs"
                android:orientation="vertical"
                android:layout_weight="0.95"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/p_mehlich"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center" />
                <TextView
                    android:text="@string/k_mehlich"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/sat_bases"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/ctc_solo"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/prnt_calcario"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1.0"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/p_meh"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/k_meh"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/sat_bases"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/ctc"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/prnt"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:layout_width="match_parent">
                <TextView
                    android:text="@string/mg_dm3"
                    android:layout_height="45dp"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"/>
                <TextView
                    android:text="@string/mg_dm3"
                    android:layout_height="45dp"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical" />
                <TextView
                    android:text="@string/percent"
                    android:layout_height="45dp"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"/>
                <TextView
                    android:text="@string/cmolc_dm3"
                    android:layout_height="45dp"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"/>
                <TextView
                    android:text="@string/percent"
                    android:layout_height="45dp"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_calcular"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/branco"
            android:onClick="calcularAbobRast"/>
        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recomendacao"
            android:textSize="@dimen/tamanho_subtitulo"/>
        <LinearLayout
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qtd_calcario"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:id="@+id/calagemf12"
                android:textColor="@color/colorAccent"
                android:text="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tha"/>
        </LinearLayout>
        <TextView
            android:paddingTop="@dimen/txtObs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adubacao_canteiro"/>
        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l_m2"/>
            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esterco_bovino"/>
        </LinearLayout>
        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorAccent"
                android:id="@+id/superfosfato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g_m2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/superfosfato" />
        </LinearLayout>
        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:id="@+id/fte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g_m2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fte"/>
        </LinearLayout>
        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aduba_pos_plantio"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alfa_15dias"/>
            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trintadias"
                android:textColor="@color/colorAccent"
                android:text="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g_m2"/>
            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/adubo"
                android:textColor="@color/colorAccent"
                android:text="0"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alfa_30_40dias"/>
            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sessentadias"
                android:textColor="@color/colorAccent"
                android:text="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g_m2"/>
            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/adubo1"
                android:textColor="@color/colorAccent"
                android:text="0"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/txt_obs"
            android:textColor="@color/PrimaryText"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1)"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alfa_obs1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2)"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alfa_obs2"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3)"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alfa_obs3"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4)"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alfa_obs4"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5)"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alfa_obs5"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
